
      2.15: In progress...

       NEW: Start/stop RDS and fetch Program Identification via remote control.
       NEW: Added IQ balancing to MacOS release.
     FIXED: Erratic behaviour of S-meter.
     FIXED: Compilation error due to missing include.
  IMPROVED: Reordered the receiver mode drop-down list.
  IMPROVED: Receiver mode is now stored as a string in settings files.
  IMPROVED: Increased automatic squelch margin to 3 dB.


    2.14.6: Released October 6, 2021

     FIXED: SoapyPlutoSDR driver on MacOS.
  IMPROVED: MacOS releases are now signed & notarized.


    2.14.5: Released October 3, 2021

       NEW: Added SoapyRemote to AppImage and DMG releases.
       NEW: Added SoapyPlutoSDR to DMG release.
       NEW: Preliminary support for GNU Radio 3.10.
     FIXED: Compatibility with case-sensitive filesystems on MacOS.
  IMPROVED: Better reception of RDS signals.


    2.14.4: Released December 28, 2020

       NEW: Many more keyboard shortcuts.
       NEW: Display filename when recording audio.
     FIXED: Audio output doesn't work on MacOS Big Sur.
     FIXED: DC remove button doesn't work when Demod Off mode is selected.
  IMPROVED: Better demodulation of FM stereo signals.


    2.14.3: Released December 9, 2020

     FIXED: Lock button in Audio options dialog is always shaded on MacOS.
     FIXED: Restored Airspy HF and BladeRF support in MacOS builds.
     FIXED: Restored frequency tooltips on MacOS.
     FIXED: Monospace text displayed incorrectly on MacOS.
  IMPROVED: Better rendering on high-DPI screens.


    2.14.2: Released December 3, 2020

       NEW: Added button to lock audio FFT and waterfall ranges.
     FIXED: Crash when invalid device string is entered.
     FIXED: Receiver starts unexpectedly when "Enable RDS" is checked.
     FIXED: Invert scrolling option doesn't apply to audio FFT.


    2.14.1: Released November 27, 2020

     FIXED: Hardware retuning when dragging frequency axis with center button.